testsuite/tests/rename/should_fail/rnfail021.hs
-- !!! Qualified names in binding positions are rejected

module Foo where

(Baz.f, x) = True

